tests/diag/syntax-missing-semi.expected
tests/diag/syntax-missing-semi.wisp:4:3: error: expected ';'
    }
    ^
